--- a/config.env
+++ b/config.env
@@ -1,56 +1,51 @@
-REQUIRED CONFIG
-BOT_TOKEN = "2108033427:AAGrM_aLMP-_onVU9TUr4tSP2Vf7fGr4p_I"
-GDRIVE_FOLDER_ID = "0ABf9tKrFsavPUk9PVA"
-OWNER_ID =766546130
+# ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
+BOT_TOKEN = "5217349054:AAEXztl5T5ZGAm8h6LYrZ8lx5YSXjrkNQ2E"
+GDRIVE_FOLDER_ID = "1Sa_QYbAIv2J0KigXgoY31dFHGuZQ9x8j"
+OWNER_ID =1226800996
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
-AUTO_DELETE_MESSAGE_DURATION = -1
-IS_TEAM_DRIVE = "True"
-UPSTREM_REPO = "https://github.com/breakdowns/slam-mirrorbot"
-UPSTREM_BRANCH = "master"
-TELEGRAM_API = 7363654
-TELEGRAM_HASH ="68e518c106f816dc7eebded6bfaf33a6"
+AUTO_DELETE_MESSAGE_DURATION = 20
+IS_TEAM_DRIVE = "true"
+TELEGRAM_API = 14757616
+TELEGRAM_HASH = "ac6571c04dbef6c26d9f7cae0919aad9"
+DATABASE_URL = "postgres://dsdugdhz:YM6C6NZ9ahlWdz8y6BLtir7EpwUT3u51@salt.db.elephantsql.com/dsdugdhz"
+UPSTREAM_REPO = "https://github.com/worrior33445666/h"
+UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
-DATABASE_URL = ""
-AUTHORIZED_CHATS = "-610772399" # Split by space
-SUDO_USERS = "1226800996"  # Split by space
+AUTHORIZED_CHATS = "-1001243668834"
 IGNORE_PENDING_REQUESTS = ""
-USE_SERVICE_ACCOUNTS = ""
-INDEX_URL = "https://production.movies.plwdb.workers.dev/"
-STATUS_LIMIT = "4"  # Recommend limit status to 4 tasks max
+USE_SERVICE_ACCOUNTS = "True"
+INDEX_URL = "https://download.beflix.workers.dev/0:/"
 UPTOBOX_TOKEN = ""
 MEGA_API_KEY = ""
 MEGA_EMAIL_ID = ""
 MEGA_PASSWORD = ""
 BLOCK_MEGA_FOLDER = "" 
 BLOCK_MEGA_LINKS = ""
-STOP_DUPLICATE = "True"
+STOP_DUPLICATE_MIRROR = ""
+STOP_DUPLICATE_CLONE = ""
+STOP_DUPLICATE_MEGA = ""
 SHORTENER = ""
 SHORTENER_API = ""
-# qBittorrent
-IS_VPS = ""  # Don't set this to True even if VPS, unless facing error with web server
-SERVER_PORT = "80"  # Only for VPS
-BASE_URL_OF_BOT = ""  # Required for Heroku
+IMAGE_URL = "https://telegra.ph/file/db03910496f06094f1f7a.jpg"
 # If you want to use Credentials externally from Index Links, fill these vars with the direct links
 # These are optional, if you don't know, simply leave them, don't fill anything in them.
 ACCOUNTS_ZIP_URL = ""
 TOKEN_PICKLE_URL = ""
 # To use limit leave space between number and unit. Available units is (gb or GB, tb or TB)
 TORRENT_DIRECT_LIMIT = ""
-TAR_UNZIP_LIMIT = ""
 CLONE_LIMIT = ""  
 MEGA_LIMIT = ""
-# Required for Heroku
-HEROKU_API_KEY = "54caa4d2-2538-4e84-8e21-72492148a661"
-HEROKU_APP_NAME = "plwdbxyz"
-# View Link button to open file Index Link in browser instead of direct download link
-# You can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
+# Fill only if you deploying with heroku-cli and Goorm IDE
+HEROKU_API_KEY = ""
+HEROKU_APP_NAME = ""
+# View Link button to open file Index Link in browser instead of direct download link, you can figure out if it's compatible with your Index code or not, open any video from you Index and check if the END of link from browser link bar is ?a=view, if yes make it "True" it will work (Compatible with Bhadoo Index Code)
 VIEW_LINK = "False"
 # Add more buttons (Three buttons are already added of Drive Link, Index Link, and View Link, you can add extra buttons too, these are optional)
 # If you don't know what are below entries, simply leave them, Don't fill anything in them.
-BUTTON_FOUR_NAME = "Index link "
+BUTTON_FOUR_NAME = ""
 BUTTON_FOUR_URL = ""
-BUTTON_FIVE_NAME = " My Drive"
+BUTTON_FIVE_NAME = ""
 BUTTON_FIVE_URL = ""
-BUTTON_SIX_NAME = " join with me in facebook "
-BUTTON_SIX_URL = "" 
+BUTTON_SIX_NAME = ""
+BUTTON_SIX_URL = ""
