--- a/config.env
+++ b/config.env
@@ -1,14 +1,14 @@
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = "5217349054:AAEXztl5T5ZGAm8h6LYrZ8lx5YSXjrkNQ2E"
-GDRIVE_FOLDER_ID = "1Sa_QYbAIv2J0KigXgoY31dFHGuZQ9x8j"
-OWNER_ID =1226800996
+BOT_TOKEN = "5153111068:AAHcVuXFJ_e7k0zrpR3q2u0bkJ8asWmEgUg"
+GDRIVE_FOLDER_ID = "0ADhDjRrLHsP3Uk9PVA"
+OWNER_ID =
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
 IS_TEAM_DRIVE = "true"
-TELEGRAM_API = 14757616
-TELEGRAM_HASH = "ac6571c04dbef6c26d9f7cae0919aad9"
-DATABASE_URL = "postgres://dsdugdhz:YM6C6NZ9ahlWdz8y6BLtir7EpwUT3u51@salt.db.elephantsql.com/dsdugdhz"
+TELEGRAM_API = 7363654
+TELEGRAM_HASH = "68e518c106f816dc7eebded6bfaf33a6"
+DATABASE_URL = "postgres://dyevmnrj:sWCweO1qlCjt-zFO9HI_7tToXJW_R0lE@satao.db.elephantsql.com/dyevmnrj"
 UPSTREAM_REPO = "https://github.com/worrior33445666/h"
 UPSTREAM_BRANCH = "master"
 # OPTIONAL CONFIG
