--- a/config.env
+++ b/config.env
@@ -1,6 +1,6 @@
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
-BOT_TOKEN = "5153111068:AAHcVuXFJ_e7k0zrpR3q2u0bkJ8asWmEgUg"
-GDRIVE_FOLDER_ID = "0ADhDjRrLHsP3Uk9PVA"
+BOT_TOKEN = "5008141817:AAF7hrx6DwYAdEVhx2YM4mREcJD7QZE_la4"
+GDRIVE_FOLDER_ID = "0AIMJ_wN6DK7RUk9PVA"
 OWNER_ID =
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
