--- a/config.env
+++ b/config.env
@@ -1,7 +1,7 @@
 # ENTER BOT TOKEN (Get your BOT_TOKEN by talking to @botfather)
 BOT_TOKEN = "5008141817:AAF7hrx6DwYAdEVhx2YM4mREcJD7QZE_la4"
 GDRIVE_FOLDER_ID = "0AIMJ_wN6DK7RUk9PVA"
-OWNER_ID =
+OWNER_ID =766546130
 DOWNLOAD_DIR = "/usr/src/app/downloads"
 DOWNLOAD_STATUS_UPDATE_INTERVAL = 5
 AUTO_DELETE_MESSAGE_DURATION = 20
